syntax = "proto3";

package auth;

option go_package = "./authpb";

service AuthService {
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc Signup(SignupRequest) returns (SignupResponse);
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    bool success = 1;
}

message SignupRequest {
    string email = 1;
    string password = 2;
}

message SignupResponse {
    bool success = 1;
}
